# Project-GP

./: .gitignore  README.md  apply_compliance_fix.py  commands.txt  debug_aps.py  debug_wmpc.py  diagnose.py  ghost_car_telemetry.csv  inertia_fitting.py  jax_config.py  main.py  opt_results_grip.csv  optimization_results.csv  physics_isolation_diagnostic.py  project_gp_upgrade_roadmap.docx  requirements.txt  results.txt  run_live.py  run_live2.py  run_validation.py  sanity_checks.py  sanity_checks_2.py  sanity_checks_backup.py  sanity_checks_results.txt  scan_ids.py  scan_logs_for_gps.py  test_3_results.txt  validate_racing_line_tv.py  visualize_gps.py  visualize_log.py
.jax_cache/: jit_evaluate_setup_jax-0c1be6d3f57977bf2f9c992c2f3e008bd931a12da29094e226e49baa5141c598-cache  jit_evaluate_setup_jax-2135b6426ec23862962b1082b21ace3cd8b247700fe93807e4099ce6daaeeda4-cache  jit_evaluate_setup_jax-27f2f58e1e18db8a0fe7556ff7e7d853882fcc7ede4428fb449a8857c556e84d-cache  jit_evaluate_setup_jax-3114b6cb843202ea6406f01e03af0fae2db9575292a52a8c34d68a9d2ca72062-cache  jit_evaluate_setup_jax-618e9d6976c36ad55e299d15526c06c567c90960b768960cbfb4cb6e25a8e16b-cache  jit_evaluate_setup_jax-756f73a35fd8fe601f8597841e90b1f252cf56b868147cb37d72559d72b4acc8-cache  jit_evaluate_setup_jax-befbcc9badae1d6be4a342d6fb1575188a85456933949b4d89dee5c8fa35e5b7-cache  jit_evaluate_setup_jax-d9fd2ea3bf9035c6fb03dc9d3c6ba31a275f38f22b04bd60624d726857012607-cache  jit_evaluate_setup_jax-ff9c5e581af6b9c6672892e53d2d6029f184c7403ebe4944b76df027afc946fe-cache
config/: aero.yaml  car_config.py  chassis.yaml  design_freeze.py  suspension.yaml  tire_coeffs.py
logs/: sanity_20260426_1719.txt  (+1 more)
mirena_common-main/mirena_common/: .gitignore  CMakeLists.txt  package.xml
mirena_common-main/mirena_common/const/: mirena_const.h
mirena_common-main/mirena_common/msg/: ASStatus.msg  BezierCurve.msg  BezierCurvePoint.msg  Car.msg  CarControl.msg  CarParameters.msg  DebugEntity.msg  DebugEntityList.msg  Empty.msg  Entity.msg  EntityList.msg  FlatPoseDist.msg  Gate.msg  MissionStatus.msg  Track.msg  WheelSpeeds.msg
mirena_common-main/mirena_common/src/car_model/: README.md  acados_sim_builder.py  generate.py  system_dynamics.py
mirena_common-main/mirena_common/src/common_lib/bezier_curve/: bezier_curve.cpp  bezier_curve.hpp
mirena_common-main/mirena_common/src/common_lib/ekf/: README.md
mirena_common-main/mirena_common/src/conversion/: ros_conversion.cpp  ros_conversion.hpp
mirena_common-main/mirena_common/src/debug/: debug.cpp  debug.hpp
mirena_common-main/mirena_common/trash_can/: README.md
mirena_common-main/mirena_common/trash_can/message_native_wraper/Car/: car.cpp  car.hpp
mirena_common-main/mirena_common/trash_can/message_native_wraper/Common/: msg_wrapper.hpp
mirena_common-main/mirena_common/trash_can/message_native_wraper/Entity/: entity.cpp  entity.hpp
mirena_common-main/mirena_common/trash_can/message_native_wraper/EntityList/: entity_list.cpp  entity_list.hpp
mirena_common-main/mirena_common/trash_can/models/car/DBMMK1/: conversion.cpp  conversion.hpp  dbmmk1.cpp  dbmmk1.hpp
mirena_common-main/mirena_common/trash_can/syncronized_service_request/: car_entities_conjunct_request.cpp  car_entities_conjunct_request.hpp
(+350 files in other folders)
